--- a/src/panels/home.html
+++ b/src/panels/home.html
@@ -17,16 +17,16 @@
         </div>
         <div class="social-tab">
             <div class="social-list content-scroll">
-                <div data-url="https://discord.gg/e9q7Yr2cuQ" class="social-block">
+                <div data-url="https://cdn.jtheberg.cloud/discord" class="social-block">
                     <div class="icon-discord icon-social"></div>
                 </div>
 
-                <div data-url="https://github.com/luuxis" class="social-block">
+                <div data-url="https://cdn.jtheberg.cloud/github" class="social-block">
                     <div class="icon-github icon-social"></div>
                 </div>
 
-                <div data-url="https://www.youtube.com/LuuxisHD" class="social-block">
-                    <div class="icon-youtube icon-social"></div>
+                <div data-url="https://jtheberg.cloud" class="social-block">
+                    <div class="icon-web icon-social"></div>
                 </div>
             </div>
         </div>
